src/components/PortfolioItem.module.scss
@use 'sass:color';

$standardWidth: 1rem;

.block {
  margin: 0;
  padding: 0;
  width: 100%;
}

.preview {
  position: relative;
  width: 100%;
  max-height: 24rem;

  z-index: 10;
  overflow: hidden;

  $shadow: .4rem;
  box-shadow: 0 $shadow*2/3 $shadow $shadow/4 #0006;
}

.previewImage {
  min-width: 100%;
  min-height: 100%;

  position: relative;
  transform: translate(-50%, -25%); // TODO This won't center for some reason.
  top: 0%;                          // Like, top here does *nothing*.
  left: 50%;

  filter: brightness(50%) saturate(20%);
}

.gradientOverlay {
  width: 100%;
  height: 100%;

  position: absolute;
  top: 0;
  left: 0;

  background: radial-gradient(ellipse 102% 280% at 0% 0%, transparent 50%, #A79A 75%, #86BA 85%, #68BA);
  mix-blend-mode: overlay;
  // TODO Add cloud texture? Can I white mask an element or repeated image?
}

.titleWrapper {
  position: absolute;
  top: 0;
  left: 0;

  margin-top: 1rem;
  margin-left: 1rem;
  width: 100%;

  display: flex;
  justify-content: center;
}

.titleText {
  width: 100%;
  max-width: 100rem;
}

.titleLetters {
  color: var(--text-primary);
  width: 4rem;
  height: 5rem;
  font-size: 4rem;
  font-weight: 600;
}

.body {
  position: relative;
  width: 100%;

  display: flex;
  justify-content: center;
}

.mainWrapper {
  width: 100%;
  max-width: 100rem;
}

.main {
  display: inline-block;

  margin: 1rem 2rem 0 1rem;

  width: calc(100% - 22rem);
  min-width: 40ch;        // TODO Add a media break here so that {width: calc(100% - 10ch);} instead.
  max-width: 60ch;          
    // TODO What to do with that extra space on the right side?
    // TODO Further, when sidebar and navbar collide, the latter should turn into a hamburer menu or something.

  color: var(--text-primary);
  font-size: 1.5rem;

  overflow: hidden;
}

.technologies {
  padding-left: .8rem;
  opacity: .5;

  // TODO Diff typeface
  font-size: 1.1rem;
  letter-spacing: .2rem;
}

.technologyWord {
  $gap: 2rem;

  display: inline-block;
  margin-right: $gap;

  &::after {
    content: '/';
    position: relative;
    left: $gap / 2;
  }

  &:last-child {
    &::after {
      content: '';
    }
  }
}

.description {
  margin-top: 1rem;
}

.endbar {
  $margin: 1.25rem;
  margin-top: $margin;
  margin-bottom: $margin * 2;

  width: 16ch;
  height: .4rem;
  background: #A79;
  border-radius: 1rem;
}

.sidebarWrapper {
  display: inline-block;
  position: relative;
  vertical-align: top;
  overflow: hidden;
}

.sidebar {
  width: 10ch;
  min-height: 9rem;

  $barWidth: .3rem;
  border-left: $barWidth solid #A79;
  padding-left: $barWidth;

  // Draw a shadow from the preview image over the link menu.
  &::before {
    content: '';

    position: absolute;
    top: -1rem;
    left: 0;

    width: 100%;
    height: 1rem;

    $shadow: .4rem;
    box-shadow: 0 0rem $shadow $shadow/2 #0008;
  }
}

.link {
  display: block;

  margin: 0;
  padding: .5rem .5rem;

  width: 100%;
  height: 2.5rem;
  background: #A79;

  outline: none;
  border: none;

  color: white;
  font-size: 1.5rem;
  font-weight: 500;
  text-decoration: none;
  line-height: 1.8rem;
  letter-spacing: .2rem;
  
  &:hover, &:focus {
    background: color.adjust(#A79, $lightness: 12%, $saturation: 12%);
  }

  &:first-child {
    height: 3rem;
    padding-top: 1rem;
  }

  &:last-child {
    border-bottom-left-radius: .2rem;
    border-bottom-right-radius: .2rem;
  }
}

